@@ -21,6 +21,8 @@ Cacti CHANGELOG
 -bug: database upgrade and cacti.sql differ
 -bug: drop color setting background on FF does not work
 -bug: cli/add_tree.php requires as least a host-id for --list-graphs
+-bug: add_tree.php did not allow nodes with propagating sort options
+-bug: when adding a tree node via the api numeric and natural were reversed
 -feature#0001249: New pseudo CDEF variables for "Count All|Similar Data Sources (NO)?DUPS"
 -feature#0001235: CLI script needed to activate a query: add_data_query.php
 -feature#0001233: Move $export_types variable definition from templates_export.php to include/global_form.php
